--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -354,7 +354,7 @@ Removes the 3rd patient in the displayed list of patients from the queue.
 Selects the 1st Cassandra as displayed in the list resulting from the `find Cassandra` command and removes her from the queue.
 // end::queuecommands[]
 
-// tag::queuecommands[]
+// tag::datacommands[]
 === Data Commands
 
 ==== Displaying average statistics : `averages`
@@ -366,6 +366,49 @@ Format: `averages`
 
 Displays all the statistics that are totals. +
 Format: `totals`
+
+=== Displaying patient statistics : `patientstats`
+Displays the following information about patients:
+****
+* A summary of the number of patients over various time periods.
+* The number of patients segmented by each day of the week.
+* The number of patients segmented by different time periods within a day.
+****
+Format: `patientstats`
+
+==== Displaying appointment statistics : `appointmentstats`
+
+Displays the following information about appointments:
+****
+* A summary of the number of scheduled appointments over various time periods.
+* The availability of appointment slots as compared to the number of scheduled appointments.
+* The proportion of appointments that are follow-ups, as opposed to walk-in.
+****
+Format: `appointmentstats`
+
+==== Displaying doctor statistics : `doctorstats`
+
+Displays the following information about doctors:
+****
+* A summary of the average number of consultations per doctor over various time periods.
+* The number of patient preferences for each doctor.
+****
+Format: `doctorstats`
+
+==== Displaying medicine statistics : `medstats`
+
+Displays the following information about medicines:
+****
+* A summary of the quantity of medicines prescribed over various time periods.
+* The average spending on medicines per patient.
+* A breakdown of medicines by their quantity issued.
+****
+Format: `medstats`
+
+==== Exporting patient records : `export`
+
+Exports patient data. +
+Format: `exportpatient`
 // end::datacommands[]
 
 // tag::medicinecommands[]
