--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -357,7 +357,7 @@ Selects the 1st Cassandra as displayed in the list resulting from the `find Cass
 // tag::datacommands[]
 === Data Commands
 
-=== Displaying patient statistics : `patientstats`
+==== Displaying patient statistics : `patientstats`
 Displays the following information about patients:
 ****
 * A summary of the number of patients over various time periods.
