--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -129,6 +129,11 @@ Pressing the kbd:[&uarr;] and kbd:[&darr;] arrows will display the previous and 
 Shows a history of savings you have allocated, from newest to oldest. +
 Format: `history -s`
 
+[NOTE]
+====
+Only history of wishes which currently exist in the `WishBook` will be stored. (i.e. wishes that have been deleted will no longer be tracked.)
+====
+
 === Locating wishes by name: `find`
 
 Finds wishes which satisfy the given search predicate. +
@@ -178,7 +183,7 @@ Selects the wish identified by the index number used in the displayed wish list.
 Format: `select INDEX`
 
 ****
-* Selects the wish and loads the Google search page for the wish at the specified `INDEX`.
+* Selects the wish and loads the webpage at the `url` specific to that wish at the specified `INDEX`.
 * `INDEX` refers to the index number shown in the displayed wish list.
 * `INDEX` *must be a positive integer* `1, 2, 3, ...`
 ****
