--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -541,7 +541,7 @@ Use case resumes at step 3.
 
 *MSS*
 
-1. User requests to display a deck that matches their search query.
+1. User requests to display any decks that match their search query.
 2. Anakin returns the list of decks that match the search query.
 +
 Use case ends.
@@ -553,6 +553,26 @@ Use case ends.
 +
 [none]
 ** 1a1. Anakin returns an empty list of decks
++
+Use case ends.
+
+
+=== Locate a card
+
+*MSS*
+
+1. User requests to display any cards that match their search query.
+2. Anakin returns the list of cards that match the search query.
++
+Use case ends.
+
+*Extensions*
+
+[none]
+* 1a. The card does not exist
++
+[none]
+** 1a1. Anakin returns an empty list of cards
 +
 Use case ends.
 
